@@ -11,6 +11,7 @@
 * + vertically split screen view for image and OCR output.
 * Correct use of dpi option in v4.0.0-beta.1 tesseract call (i.e. Bionic).
 * Check that the core font cannot encode the glyphs before using TTF.
+* + option to put OCR output to the right of the image, rather than behind it.
 * Update to Hungarian translation (thanks to csola)
 
 
